--- a/visualize_evaluation.ipynb
+++ b/visualize_evaluation.ipynb
@@ -20,8 +20,7 @@
    ],
    "source": [
     "import tensorflow_model_analysis as tfma\n",
-    "from Utils.utils import load_config_file\n",
-    "config_file = load_config_file(\"components_output.yaml\")"
+    "from Utils.utils import load_config_file"
    ]
   },
   {
